# docs/swagger.yaml
@@ -29,10 +29,14 @@ definitions:
     enum:
     - boat
     - maintenance
+    - wine_festival_boats
+    - special_event
     type: string
     x-enum-varnames:
     - BoatReason
     - Maintenance
+    - WineFestivalBoats
+    - SpecialEvent
   domains.ClosingType:
     enum:
     - two_way
@@ -130,7 +134,6 @@ info:
     name: MIT
     url: https://github.com/vareversat/chabo-api/blob/main/LICENSE.md
   title: Chabo API - The Chaban-Delmas bridge API
-  version: 0.0.0
 paths:
   /forecasts:
     get:
@@ -161,6 +164,8 @@ paths:
         enum:
         - boat
         - maintenance
+        - wine_festival_boats
+        - special_event
         in: query
         name: reason
         type: string
